# 6.419x-project0

./: 1_randomization.py  2_operations.py  3_max_min_norm.py  4_neural_network.py  5_scalar.py  6_vector.py  README.md  debug.py  pyproject.toml
