[tool.poetry]
name = "unit0"
version = "0.1.0"
description = ""
authors = ["Ramdhan Hidayat <ramdhan.h@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.6.0"
numpy = "^2.2.2"
matplotlib = "^3.10.0"
scipy = "^1.15.1"
tqdm = "^4.67.1"
scikit-learn = "^1.6.1"


[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
